# illinois-hoops-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Transfer_Portal.py  2_Opponent_Scouting.py
data/raw/: 2025_players.csv  2026_players.csv
illinois_hoops/: __init__.py  appkit.py  config.py  data.py  portal.py  roster.py  scouting.py
