[project]
name = "illinois-project"
version = "0.1.0"
description = "Illinois Hoops Analytics Hub — a public-data front-office tool (transfer portal, opponent scouting, roster fit) for college basketball."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["illinois_hoops"]
